--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --color-bg: #2c2c32;
+    --color-active: #0f7dc6;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.wrapper {
+    min-height: 100vh !important;
+    display: flex !important;
+    flex-direction: column !important;
+}
+
+nav {
+    background-color: #2c2c32 !important;
+    align-items: center;
+}
+
+.nav-wrapper a {
+    color: white;
+    text-decoration: none;
+}
+
+@media (min-width: 992px) {
+    nav {
+        padding: 0 6rem;
+    }
+    footer.page-footer {
+        padding-top: 10px;
+        max-height: 6rem;
+    }
+    .scroll-btn {
+        display: none !important;
+    }
+}
+
+@media (max-width: 992px) {
+    header {
+        position: fixed !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100% !important;
+        background-color: #2c2c32; /* Здесь используйте ваш цвет фона */
+        z-index: 1000 !important; /* Укажите достаточно большой z-index, чтобы заголовок был поверх других элементов */
+    }
+}
+
+.content {
+    padding: 30px;
+    flex: 1 1 auto;
+}
+
+footer {
+    padding: 0 1rem;
+    background-color: #2c2c32 !important;
+}
+
+footer.page-footer {
+    padding-top: 10px;
+    max-height: 5rem;
+}
+
+.active-link {
+    color: var(--color-active) !important;
+    cursor: default;
+}
+
+.list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 1rem;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+}
+.card-content {
+    flex-grow: 1;
+}
+img,
+iframe {
+    max-width: 100%;
+}
+iframe {
+    width: 600px;
+    height: 350px;
+}
+
+.scroll-btn {
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: rgb(48, 46, 46); /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 50%; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+.scroll-btn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
+
+.search-btn {
+    position: absolute;
+    top: 0;
+    right: 0.5rem;
 }
